English Dolibarr ChangeLog

***** ChangeLog for 3.0 compared to 2.9 *****

For users:
- New: A lot of enhancements into ECM module:
       Directories can contains special characters,
       Speed enhancements,
       Directories can be created outside of Dolibarr, refresh button will 
       update database,
       Can rename a file.
- New: Reordering lines in invoice, orders, commercial proposal is faster (use Ajax
       technology).      
- New: Can import members using assistant.
- New: Can exclude deposit, replacement or credit notes in script rebuild_merge_pdf.
- New: task #10473 : Option MAIN_PROFIDx_IN_ADDRESS must no more be hidden.
- New: Can generate business card for on particular member.
- New: Task #10553 : Can attach files on members card.
- New: Can filter on payment type and bank account in payment lists.
- New: When sending supplier orders by mail, a text is predefined.
- New: Upgrade process works with Postgresql.
- New: Task #10538: Add filter on expiration date of subscription for
       foundation module email selector.
- New: Task #9643: Add 2 status (tosell/tobuy) on products instead of only
       1 status for both selling and buying.       
- New: Can input payment conditions on several lines.
- New: Add hidden option MAIN_LOGOUT_GOTO_URL to set the exit url after
       a logout.
- New: For germany, we invert order of address.
- New: Add hidden option MAIN_SERVICES_ARE_ECOMMERCE_200238EC.
- New: Support NPR in customer product prices.
- New: Add more volume units (ounce, gallon, inch, feet, ...)
- New: Delivery date accepts hours and minutes.
- New: Can add a comment on stock dispatching to be save into stock movements.
- New: Add option to send all emails sent to a bulk carbon copy.
- New: Preview of emails sent by member module is shown.
- New: task #10100 : Add button to create invoice from a subscription
- New: Reorganize tabs on third parties.
- New: Option MAIN_INVERT_SENDER_RECIPIENT is available in einstein pdf template.